--- a/style.css
+++ b/style.css
@@ -1,148 +1,759 @@
-:root{
-    --background: #101114;
-    --primary-color: #1C1D20;
-    --secondary-color: #4A4D57;
-    --accent-color: #00FFC4;
-    --text-color: #F9F9F9;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-}
-html{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16pt;
-    color: var(--text-color);
-}
-body{
-    min-height: 100vh;
-    padding: 10px;
-    background-color: var(--background);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-h1{
-    margin-top: 100px;
-    margin-bottom: 20px;
-    font-size: 3rem;
-    font-weight: 800;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--accent-color);
-}
-.wrapper{
-    width: 700px;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px ;
-}
-#todo-input{
     box-sizing: border-box;
-    padding: 12px 20px;
-    width: 100%;
-    background: none;
-    border: 2px solid var(--secondary-color);
-    border-radius: 1000px;
-    font: inherit;
-    color: var(--text-color);
-    caret-color: var(--accent-color);
-}
-#todo-input:focus{
-    outline-color: #3Ae;
-}
-form{
-    position: relative;
-}
-#add-button{
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: var(--accent-color);
-    height: 100%;
-    padding: 0 30px;
+    text-decoration: none;
+    list-style: none;
     border: none;
-    border-radius: 1000px;
-    font: inherit;
-    font-weight: 600;
-    color: var(--background);
-    cursor: pointer;
+    outline: none;
+    font-family: "Poppins", sans-serif;
 }
-.todo{
-    margin-bottom: 10px;
-    padding: 0 16px;
-    background-color: var(--primary-color);
-    border-radius: 15px;
+
+:root{
+    --nav-bg-color: rgba(255, 255, 255, .1);
+    --bg-color: #171f2b;
+    --second-bg-color: #1f2733;
+    --third-bg-color: #2d3542;
+    --main-color: #0ef;
+    --white-color: #fff;
+    --tab-list-color: #7c8594;
+}
+
+::selection {
+    background: var(--main-color);
+    color: var(--bg-color);
+}
+
+::-webkit-scrollbar{
+    width: .5rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background: var(--main-color);
+    border-radius: 1rem;
+}
+
+::placeholder{
+    color: var(--white-color);
+}
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    color: var(--white-color);
+    overflow: hidden;
+    background: rgb(255, 255, 255);
+}
+
+p{
+    font-size: 1.6rem;
+}
+
+.sample{
+    color: white;
+    font-size: 5px;
+    border: none;
+    background-color: var(--bg-color);
+    padding: 5px 19px;
+    position: fixed;
+    top: 4px;
+    left: 10px;
+    z-index: 300;
+    border-radius: 2rem;
+    transition: .3s ease-in-out;
+}
+.sample:hover{
+    font-size: 20px;
+}
+
+.nav{
+    position: fixed;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 40rem;
+    padding: 2rem 0;
+    background: var(--nav-bg-color);
+    border-radius: 5rem;
+    z-index: 100;
+    animation: animate-nav 4s ease-in-out backwards;
+    animation-delay: 0s;
+}
+
+@keyframes animate-nav {
+    0%{
+        visibility: visible;
+        opacity: 1;
+    }
+    100%{
+        transform: scale(0) rotateY(-360deg);
+    }
+}
+
+.nav .nav-list{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nav-list li{
+    position: relative;
+    display: flex;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.nav-list li:hover,
+.nav-list li.active{
+    color: var(--main-color);
+}
+
+.tooltip{
+    position: absolute;
+    top: -4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .3rem 1rem;
+    background: var(--main-color);
+    border-radius: .4rem;
+    font-size: 1.6rem;
+    color: var(--bg-color);
+    font-weight: 500;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.nav-list li:hover .tooltip,
+a:hover .tooltip,
+.portfolio-item:hover .work-info{
+    visibility: visible;
+    opacity: 1;
+}
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    perspective: 1500px;
+    perspective-origin: 50%;
+}
+
+.box{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transform-origin: 50% 50% -50vw;
+    transform: rotateY(0deg);
+    transition: 2s;
+    animation: animate-cube 4s ease-in-out backwards;
+}
+
+@keyframes animate-cube {
+    0%{
+        transform: scale(0) rotateY(-360deg);
+    }
+
+    100%{
+        transform: scale(1) rotateY(0deg);
+    }
+}
+
+.section{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    padding: 0 10%;
+    backface-visibility: hidden;
+}
+
+.section:nth-child(even){
+    background: var(--second-bg-color);
+}
+
+.section.about{
+    transform: translateX(50vw) translateZ(-50vw) rotateY(90deg);
+}
+
+.section.resume{
+    transform: translateZ(-100vw) rotateY(-180deg);
+    transform-origin: 50%; 
+}
+
+.section.portfolio{
+    transform: translateX(-50vw) translateZ(-50vw) rotateY(-90deg);
+}
+
+.section.contact{
+    visibility: hidden;
+    transition-delay: .5s;
+}
+
+.section.contact.active{
+    visibility: visible;
+}
+
+.section.contact.action-contact{
+    transition-delay: 1.5s;
+}
+
+.section.contact.action-contact.active{
+    transition-delay: 0s;
+}
+
+.home,
+.about{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+}
+
+.home-info h1{
+    font-size: 5.5rem;
+    color: var(--main-color);
+    line-height: 1;
+}
+
+.home-info h3{
+    font-size: 3rem;
+}
+
+.desc{
+    margin: 1rem 0 2rem;
+}
+
+.home-info .btn-sci{
     display: flex;
     align-items: center;
 }
 
-.todo .todo-text{
-    padding: 15px;
-    padding-right: 0;
-    flex-grow: 1;
-    transition: 200ms ease;
+.btn{
+    display: inline-flex;
+    padding: 1.2rem 3rem;
+    background: var(--main-color);
+    border-radius: 5rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--bg-color);
+    font-weight: 600;
+    transition: .3s;
 }
-.delete-button{
-    padding: 10px;
-    background: none;
-    border: 2px solid #fff;
-    color: #fff;
+
+.btn:hover{
+    box-shadow: none;
+}
+
+.home-info .btn-sci .sci{
+    margin-left: 2rem;
+}
+
+.home-info .btn-sci .sci a{
+    position: relative;
+    display: inline-flex;
+    padding: .8rem;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 0 .8rem;
+    transition: .3s;
+}
+
+.home-info .btn-sci .sci a:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+}
+
+.img-box{
+    position: relative;
+    width: 33vw;
+    height: 33vw;
+    background: linear-gradient(var(--bg-color), var(--main-color));
+    border-radius: 50%;
+    border: .5rem solid var(--main-color);
+    box-shadow: 0 0 2rem var(--main-color);
     display: flex;
     justify-content: center;
+    overflow: hidden;
+    transition: 1s;
+}
+
+.img-box.home-img:hover{
+    box-shadow: 0 0 8rem var(--main-color);
+}
+
+.img-box img{
+    position: absolute;
+    top: 3rem;
+    display: block;
+    width: 85%;
+    object-fit: cover;
+}
+
+.img-box.about-img{
+    background: transparent;
+    box-shadow: 0 0 2rem var(--main-color), inset 0 0 1rem var(--main-color);
+}
+
+.img-box.about-img img{
+    z-index: -1;
+}
+
+.title{
+    font-size: 4rem;
+    text-align: center;
+}
+
+.about-info .title{
+    text-align: left;
+}
+
+.about-info h3{
+    font-size: 2.5rem;
+    color: var(--main-color);
+    margin-top: -1rem;
+}
+
+.about-info .btn{
+    padding: 1.2rem 4rem;
+}
+
+.resume,
+.portfolio{
+    padding-top: 2rem;
+    padding-bottom: 28rem;
+}
+
+.tab-box{
+    display: flex;
+    width: 100%;
+    height: 5rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.tab-list{
+    display: flex;
     align-items: center;
+    width: 100%;
+    border-bottom: .3rem solid var(--tab-list-color);
     cursor: pointer;
-    transition: 300ms ease;
+    color: var(--tab-list-color);
+    transition: .5s;
+}
+
+.tab-list.resume-list.active,
+.tab-list.portfolio-list.active{
+    border-color: var(--main-color);
+    color: var(--main-color);
+}
+
+.resume-list::nth-child(2){
+    justify-content: center;
+}
+
+.resume-list::nth-child(3){
+    justify-content: flex-end;
+}
+
+.tab-list h3{
+    font-size: 2.5rem;
+}
+
+.tab-wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.tab-grid{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    gap: 1.8rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(.8);
+}
+
+.tab-grid.resume-box.active,
+.tab-grid.portfolio-box.active{
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+    transition: .5s;
+}
+
+.tab-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: var(--third-bg-color);
+    border-radius: .8rem;
+    padding: 2rem;
+}
+
+.tab-item h4{
+    font-size: 2.3rem;
+}
+
+.resume-item h4:nth-child(1),
+.resume-item h4:nth-child(3){
+    font-size: 1.7rem;
+    color: var(--main-color);
+    font-weight: 400;
+}
+
+.resume-item h4:nth-child(3){
+    position: relative;
+    color: var(--white-color);
+    margin-left: 2rem;
+}
+
+.resume-item h4:nth-child(3)::before{
+    content: '';
+    position: absolute;
+    left: -2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1rem;
+    height: 1rem;
+    background: var(--main-color);
     border-radius: 50%;
 }
-.delete-button:hover{
-    border: 2px solid #c92626;
-    border-radius: 50%;
-    color: #c92626;
-    padding: 10px;
+
+.tab-item p{
+    margin-top: 1rem;
 }
-.custom-checkbox{
-    border: 2px solid var(--accent-color);
+
+.resume-box.skills{
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+}
+
+.resume-box.skills .resume-item{
+    align-items: center;
+}
+
+.resume-box.skills .resume-item i{
+    font-size: 8rem;
+    transition: .3s;
+}
+
+.resume-box.skills .resume-item:hover i{
+    color: var(--main-color);
+}
+
+.resume-box.skills .resume-item p{
+    margin-top: 0;
+}
+
+.portfolio-list:nth-child(2){
+    justify-content: flex-end;
+}
+
+.portfolio-box.work .portfolio-item{
+    position: relative;
+}
+
+.portfolio-box.work .portfolio-item::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--third-bg-color);
+    border-radius: .8rem;
+    z-index: 1;
+    opacity: 0;
+    transition: .3s;
+}
+
+.portfolio-box.work .portfolio-item:hover::before{
+    opacity: .9;
+}
+
+.portfolio-item .work-img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: .8rem;
+    overflow: hidden;
+}
+
+.portfolio-item .work-img img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .3s;
+}
+
+.portfolio-item:hover .work-img img{
+    transform: scale(1.2);
+}
+
+.portfolio-item .work-info{
+    z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s;
+}
+
+.portfolio-item .work-info h4{
+    line-height: 1;
+}
+
+.portfolio-item .work-info .tech-used{
+    color: var(--main-color);
+    border-bottom: .1rem solid var(--white-color);
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+}
+
+.portfolio-item .portfolio-icon a{
+    position: relative;
+    display: inline-flex;
+    padding: 1rem;
+    background: var(--white-color);
     border-radius: 50%;
-    min-height: 20px;
-    min-width: 20px;
+    font-size: 2.5rem;
+    color: var(--bg-color);
+    transition: .3s;
+}
+
+.portfolio-item .work-icon a:hover{
+    background: var(--main-color) ;
+}
+
+.portfolio-item .work-icon a:nth-child(1){
+    margin-right: 1rem;
+}
+
+.portfolio-item .work-icon a:nth-child(1) i{
+    transform: rotate(135deg);
+}
+
+.portfolio-item .service-icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: .5rem;
+}
+
+.portfolio-item .service-icon .icon{
+    font-size: 3rem;
+    margin-left: -.3rem;
+    transition: .3s;
+}
+
+.portfolio-item:hover .service-icon .icon{
+    color: var(--main-color);
+}
+
+.portfolio-item:hover .service-icon a{
+    background: var(--main-color);
+}
+
+.portfolio-item .service-icon a i{
+    transform: rotate(-135deg);
+    transition: .3s;
+}
+
+.portfolio-item .service-icon a:hover i{
+    transform: rotate(-180deg);
+}
+
+.portfolio-box.service .portfolio-item h4{
+    transition: .3s;
+}
+
+.portfolio-box.service .portfolio-item:hover h4{
+    color: var(--main-color);
+}
+
+.contact{
+    padding-top: 2rem;
+    padding-bottom: 18rem;
+}
+
+.contact-wrapper{
     display: flex;
     justify-content: center;
+    height: 100%;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    flex-shrink: 0;
-    transition: 200ms ease;
+    width: 70rem;
+}
+
+.contact-form h3{
+    font-size: 3rem;
+    color: var(--main-color);
+    margin-bottom: 1rem;
+}
+
+.contact-form .field-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.contact-form .field-box input,
+.contact-form .field-box textarea{
+    flex: 1 1 30rem;
+    padding: 2rem;
+    background: var(--third-bg-color);
+    border-radius: .6rem;
+    font-size: 1.6rem;
+    color: var(--white-color);
+}
+
+.contact-form .field-box textarea{
+    height: 20rem;
+    resize: none;
+}
+
+.contact-form .contact-btn{
+    margin-top: 2rem;
+}
+
+.contact-form .contact-btn .btn{
     cursor: pointer;
 }
-li label i{
-    color: transparent;
-}
-input[type="checkbox"]:checked ~ .custom-checkbox{
-    background-color: var(--accent-color);
-}
-input[type="checkbox"]:checked ~ .custom-checkbox i{
-    color: var(--primary-color);
-}
-input[type="checkbox"]:checked ~ .todo-text{
-    text-decoration: line-through;
-    color: var(--secondary-color);
-}
-input[type="checkbox"]{
-    display: none;
-}
-@media(max-width: 500px){
+
+@media  screen and (max-width: 1200px) {
     html{
-        font-size: 12pt;
+        font-size: 55%;
     }
-    #add-button{
-        position: unset;
+}
+
+@media  screen and (max-width: 992px) {
+
+    .section{
+        padding: 0 4%;
+    }
+
+    .resume,
+    .portfolio{
+        padding-top: 1.5rem;
+        padding-bottom: 27rem;
+    }
+
+    .contact{
+        padding-top: 1.5rem;
+        padding-bottom: 18rem;
+    }
+}
+
+@media  screen and (max-width: 768px) {
+    html{
+        font-size: 50%;
+    }
+
+    .nav{
+        bottom: 0;
+    }
+
+    .home,
+    .about{
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 2rem;
+        padding-bottom: 6rem;
+    }
+
+    .about{
+        flex-direction: column;
+    }
+
+    .img-box{
+        width: 35rem;
+        height: 35rem;
+    }
+
+    .resume,
+    .portfolio{
+        padding-bottom: 25rem;
+    }
+
+    .contact{
+        padding-bottom: 16rem;
+    }
+}
+
+@media  screen and (max-width: 600px) {
+    .resume,
+    .portfolio{
+        padding-top: 1rem;
+        padding-bottom: 22rem;
+    }
+
+    .contact{
+        padding-top: 1rem;
+    }
+
+    .tab-box{
+        margin-top: 0;
+    }
+}
+
+@media  screen and (max-width: 400px) {
+    .nav{
         width: 100%;
-        margin-top: 10px;
-        padding: 15px;
-        height: auto;
+        border-radius: 0;
     }
-    h1{
-        margin-top: 50px;
-        font-size: 10vw;
+
+    .home-info,
+    .about-info{
+        text-align: center;
+    }
+
+    .home-info h1{
+        font-size: 5rem;
+    }
+
+    .home-info .btn-sci{
+        flex-direction: column-reverse;
+    }
+
+    .home-info .btn-sci .sci{
+        margin-left: 0;
+        margin-bottom: 2rem;
+    }
+
+    .img-box{
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .about-info .title{
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .img-box{
+        width: 25rem;
+        height: 25rem;
+    }
+
+    .tab-list h3{
+        font-size: 2.3rem;
     }
 }
